tests/some-site/media/radarr/ingress.yaml
"apiVersion": "networking.k8s.io/v1"
"kind": "Ingress"
"metadata":
  "name": "radarr"
  "namespace": "media"
"spec":
  "rules":
  - "host": "radarr.example.com"
    "http":
      "paths":
      - "backend":
          "service":
            "name": "radarr"
            "port":
              "number": 7878
        "path": "/"
        "pathType": "Prefix"
